Utility con método para comentar no deprecado y mejorado